--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-query-firebase/firestore": "^1.0.0-dev.7",
     "@tanstack/react-table": "^8.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.301.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.0",
